# donezo

./: .gitignore  Dockerfile  Dockerfile.local  Makefile  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
docs/: README.MD
scripts/: check_uv.sh
