[project]
name = "donezo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]==2.15.2",
    "uvicorn[standard]>=0.34.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.11.4",
]